# pixelqt

./: CMakeLists.txt  README.md  global.h  qtcolorpicker.h  qtcolortriangle.h  qtwindowlistmenu.h
